--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places,geometry"></script>
 
-    <script src="scripts/constants.js.php"></script>
+    <script src="/assets/js/constants/"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
