--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
     <script src="bower_components/jquery-knob/js/jquery.knob.js"></script>
     <!-- endbuild -->
 
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places,geometry"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places,geometry&key=AIzaSyC-c52CURwXSmCeaD1P5wK_uG8CLEgIZyw"></script>
 
     <script src="/assets/js/constants/"></script>
 
