--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,16 @@
     <!-- endbuild -->
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places,geometry&key=AIzaSyC-c52CURwXSmCeaD1P5wK_uG8CLEgIZyw"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117918248-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-117918248-1');
+</script>
+
 
     <script src="scripts/constants.js"></script>
 
